'HTML Forms and Frames' Homework

--- a/HTML Basics Homeworks/HTML Forms and Frames/Problem 1/registration.html
+++ b/HTML Basics Homeworks/HTML Forms and Frames/Problem 1/registration.html
@@ -124,7 +124,7 @@
 			<tr>
 				<td colspan="2">
 				<input type="submit" value="Submit" />
-				<input type="button" value="Clean this form" />
+				<input type="reset" value="Clean this form" />
 			</tr>
 		</tfoot>
 	</table>
